<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pct10">10%</string>
    <string name="pct15">15%</string>
    <string name="pct20">20%</string>
    <string name="label_tip_is">Tip is:</string>
    <string name="bill_amount">bill amount</string>

</resources>
