<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tipcalculator.TipActivity$PlaceholderFragment" >
    

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/bill_amount"
         />
    

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:layout_gravity="center_vertical">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_pct10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pct10" />

        <Button
            android:id="@+id/btn_pct15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pct15" />

        <Button
            android:id="@+id/btn_pct20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pct20" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:gravity="bottom" >

        <TextView
            android:id="@+id/tv_tip_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           
            android:text="@string/label_tip_is"
         />

    </TableRow>

    
</TableLayout>

</LinearLayout>
